manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cosmonic-control
  namespace: cosmonic-system
  annotations:
#    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
#    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: "console.localhost.cosmonic.sh"
      http:
        paths:
          - backend:
              service:
                name: console
                port:
                  number: 8080
            path: /
            pathType: Prefix
    - host: "*.localhost.cosmonic.sh"
      http:
        paths:
          - backend:
              service:
                name: ingress
                port:
                  number: 80
            path: /
            pathType: Prefix
